# SDL2Game

./: CMakeLists.txt  Controller.cpp  Controller.h  Player.cpp  SDLUtils.h  main.cpp
Game/: Controller.cpp  Controller.h  GameCommon.h  Object.cpp  Object.h  Player.cpp  Player.h  README.md  SDLUtils.h
